updated the html file

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <h1></h1>
         <div class="serviBoxes">
             <div>
-                <img src="/images/image-currency.jpg" alt="">
+                <img src="/images/image-currency.jpg" alt="currency image">
                 <h3></h3>
                 <p></p>
             </div>
