--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="/css/mystylesheet.css">
 </head>
@@ -13,16 +14,22 @@
     <!-- NAV BAR SECTION -->
 
     <section id="navbar">
-            <a href="/">
-                <img src="/images/logo.svg" alt="">
-            </a>
+        <a href="/">
+            <img src="/images/logo.svg" alt="">
+        </a>
+
+        <div class="menuIcon">
+            <i class="ri-menu-fill" onclick="menuOpen()"></i>
+            <i class="ri-close-fill" onclick="menuClose()"></i>
+        </div>
+
         <div class="navlink">
             <a href="/">Home</a>
             <a href="#about">About</a>
             <a href="#servi_one">Blog</a>
             <a href="#foot">Contact</a>
         </div>
-            <a href="" class="request_invite">Request Invite</a>
+            <a href="#" class="request_invite">Request Invite</a>
     </section>
 
     <!-- NEXT SECTION -->
@@ -162,6 +169,7 @@
                     <img src="/images/icon-youtube.svg" alt="">
                 </a>
             </div>
+            <button onclick="topFunction()" id="myBtn" title="Go to top">&UpArrow;</button>
         </div>
         <div class="footnav">
             <div class="footnav_1">
